--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>447</height>
+    <height>381</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -74,22 +74,40 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="lbUnitConnectorName">
+         <property name="minimumSize">
+          <size>
+           <width>150</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>150</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>&lt;None&gt;</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pbSelectUnitConnector">
+        <widget class="QToolButton" name="pbSelectUnitConnector">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pbSetNoConnector">
+        <widget class="QToolButton" name="pbSetNoConnector">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;No connector&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
          <property name="text">
           <string>None</string>
+         </property>
+         <property name="icon">
+          <iconset theme="edit-clear"/>
          </property>
         </widget>
        </item>
@@ -107,6 +125,19 @@
          </property>
         </widget>
        </item>
+       <item>
+        <spacer name="horizontalSpacer_5">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </item>
      <item row="3" column="0">
@@ -115,20 +146,6 @@
         <string>Connection type:</string>
        </property>
       </widget>
-     </item>
-     <item row="3" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_11">
-       <item>
-        <widget class="QComboBox" name="cbConnectionType"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbConnectionTypeText">
-         <property name="text">
-          <string>Connection type text</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="lbUnitContactName">
@@ -143,10 +160,20 @@
      <item row="4" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QLineEdit" name="leUnitContactName"/>
+        <widget class="QLineEdit" name="leUnitContactName">
+         <property name="maximumSize">
+          <size>
+           <width>250</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="maxLength">
+          <number>30</number>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyContactName">
+        <widget class="QToolButton" name="pbCopyContactName">
          <property name="text">
           <string>&lt;--</string>
          </property>
@@ -160,13 +187,48 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pbSelectContact">
+        <widget class="QToolButton" name="pbSelectContact">
          <property name="text">
           <string>...</string>
          </property>
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="lbConnectionResistance">
+       <property name="text">
+        <string>Connection resistance:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QDoubleSpinBox" name="sbConnectionResistance">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="specialValueText">
+        <string>Null</string>
+       </property>
+       <property name="suffix">
+        <string> [Ohm]</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="minimum">
+        <double>-0.010000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>10.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
+      </widget>
      </item>
      <item row="6" column="0">
       <widget class="QLabel" name="lbFunctionEN">
@@ -184,7 +246,7 @@
         <widget class="QLineEdit" name="leFunctionEN"/>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyFunctionEN">
+        <widget class="QToolButton" name="pbCopyFunctionEN">
          <property name="text">
           <string>&lt;--</string>
          </property>
@@ -215,7 +277,7 @@
         <widget class="QLineEdit" name="leFunctionFR"/>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyFunctionFR">
+        <widget class="QToolButton" name="pbCopyFunctionFR">
          <property name="text">
           <string>&lt;--</string>
          </property>
@@ -246,7 +308,7 @@
         <widget class="QLineEdit" name="leFunctionDE"/>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyFunctionDE">
+        <widget class="QToolButton" name="pbCopyFunctionDE">
          <property name="text">
           <string>&lt;--</string>
          </property>
@@ -277,7 +339,7 @@
         <widget class="QLineEdit" name="leFunctionIT"/>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyFunctionIT">
+        <widget class="QToolButton" name="pbCopyFunctionIT">
          <property name="text">
           <string>&lt;--</string>
          </property>
@@ -353,38 +415,13 @@
        </item>
       </layout>
      </item>
-     <item row="5" column="1">
-      <widget class="QDoubleSpinBox" name="sbConnectionResistance">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="specialValueText">
-        <string>Null</string>
-       </property>
-       <property name="suffix">
-        <string> [Ohm]</string>
-       </property>
-       <property name="decimals">
-        <number>3</number>
-       </property>
-       <property name="minimum">
-        <double>-0.010000000000000</double>
-       </property>
-       <property name="maximum">
-        <double>10.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>0.010000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="lbConnectionResistance">
-       <property name="text">
-        <string>Connection resistance:</string>
+     <item row="3" column="1">
+      <widget class="QComboBox" name="cbConnectionType">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -462,7 +499,6 @@
   <tabstop>leSchemaPage</tabstop>
   <tabstop>pbSelectUnitConnector</tabstop>
   <tabstop>pbSetNoConnector</tabstop>
-  <tabstop>cbConnectionType</tabstop>
   <tabstop>leUnitContactName</tabstop>
   <tabstop>pbCopyContactName</tabstop>
   <tabstop>pbSelectContact</tabstop>
