Working on cable list tool (links)

--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1050</width>
-    <height>492</height>
+    <height>522</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -684,6 +684,23 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QScrollArea" name="saVehicleType">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="scrollAreaWidgetContents">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>1036</width>
+        <height>70</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
